ADDED: Industy standards to api